fix: Visibility classes overwritten in some use-case scenarios

--- a/src/css/core/visibility.styl
+++ b/src/css/core/visibility.styl
@@ -75,19 +75,19 @@ for type in desktop mobile cordova electron ios mat touch within-iframe platform
 
 @media (max-width $breakpoint-xs-max)
   .xs-hide, .gt-xs, .sm, .gt-sm, .md, .gt-md, .lg, .gt-lg, .xl
-    display none
+    display none !important
 @media (min-width $breakpoint-sm-min) and (max-width $breakpoint-sm-max)
   .sm-hide, .xs, .lt-sm, .gt-sm, .md, .gt-md, .lg, .gt-lg, .xl
-    display none
+    display none !important
 @media (min-width $breakpoint-md-min) and (max-width $breakpoint-md-max)
   .md-hide, .xs, .lt-sm, .sm, .lt-md, .gt-md, .lg, .gt-lg, .xl
-    display none
+    display none !important
 @media (min-width $breakpoint-lg-min) and (max-width $breakpoint-lg-max)
   .lg-hide, .xs, .lt-sm, .sm, .lt-md, .md, .lt-lg, .gt-lg, .xl
-    display none
+    display none !important
 @media (min-width $breakpoint-xl-min)
   .xl-hide, .xs, .lt-sm, .sm, .lt-md, .md, .lt-lg, .lg, .lt-xl
-    display none
+    display none !important
 
 .q-focus-helper
   position absolute
